js/js.translator/testData/incremental/invalidation/modifyClassAncestors/lib/a.kt
open class A {
    open var p2: String = "P"

    open fun f2(): String = "F"
}